--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color:#4d88ff;
 }
-<style>
-            h1 {text-align: center;}
-        </style>
+h1 {
+  text-align: center;
+}
