--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
   text-align: center;
 }
 #nav-td {width: 200px; text-align: center;}
-#banner {
+#my-banner {
   display: block;
   align-left: auto;
   align-right: auto;
