--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@ h1 {
 #nav-td {width: 200px; text-align: center;}
 #my-banner {
   display: block;
-  align-right: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
