--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 }
+#nav-table {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
