--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 h1 {
   text-align: center;
 }
+#nav-td {width: 200px; text-align: center;}
 #my-banner {
   display: block;
   margin-left: auto;
