--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 h1 {
   text-align: center;
 }
+h2 {
+  text-align: center;
+}
 #nav-td {width: 250px; text-align: center;}
 #my-banner {
   display: block;
