--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ h2 {
   margin-right: auto;
 }
 #web-info {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   height: 200px;
   width: 50%;
 }
